tests/fixtures/invalid/float_notin_float.py
# Cannot use 'not in' with Float and Float
x: bool = 1.0 not in 1.0
